feat: :sparkles: Added login and register functionality. Connected with Supabase

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-	"cSpell.words": ["ieedan", "neoconfetti", "shadcn", "Shadecn", "Supabase", "vercel", "Vite"]
+	"cSpell.words": [
+		"Afroze",
+		"afrze",
+		"DAAF",
+		"ieedan",
+		"neoconfetti",
+		"shadcn",
+		"Shadecn",
+		"Supabase",
+		"vercel",
+		"Vite"
+	]
 }
