--- a/package.json
+++ b/package.json
@@ -54,6 +54,11 @@
 		"vitest-browser-svelte": "^2.0.1"
 	},
 	"dependencies": {
+		"@supabase/ssr": "^0.7.0",
+		"@supabase/supabase-js": "^2.81.1",
 		"zod": "^4.1.12"
+	},
+	"overrides": {
+		"cookie": ">=0.7.0"
 	}
 }
