--- a/netlify.toml
+++ b/netlify.toml
@@ -2,12 +2,12 @@
 # SvelteKit application with Supabase integration
 
 [build]
-  command = "npm install && npm run build"
+  command = "npm ci && npm run build"
   publish = ".svelte-kit/netlify"
 
 [build.environment]
   NODE_VERSION = "20"
-  NPM_FLAGS = "--legacy-peer-deps"
+  NODE_ENV = "production"
 
 # SPA-like routing - handle all routes
 [[redirects]]
