build: :rocket: Deployment fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,11 @@
 		"afrze",
 		"DAAF",
 		"ENOTFOUND",
+		"esbuild",
+		"geolocation",
 		"ieedan",
 		"neoconfetti",
+		"nosniff",
 		"plpgsql",
 		"schemaname",
 		"shadcn",
