--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
 		"esbuild",
 		"geolocation",
 		"ieedan",
+		"layerchart",
 		"neoconfetti",
 		"nosniff",
 		"plpgsql",
@@ -18,6 +19,7 @@
 		"TIMESTAMPTZ",
 		"typname",
 		"Unmapping",
+		"vaul",
 		"vercel",
 		"Vite"
 	]
