--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
+		"layerchart": "^2.0.0-next.27",
 		"mode-watcher": "^1.1.0",
 		"playwright": "^1.56.1",
 		"prettier": "^3.6.2",
@@ -49,6 +50,7 @@
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.46.1",
+		"vaul-svelte": "^1.0.0-next.7",
 		"vite": "^7.1.10",
 		"vitest": "^4.0.5",
 		"vitest-browser-svelte": "^2.0.1"
@@ -56,6 +58,7 @@
 	"dependencies": {
 		"@supabase/ssr": "^0.7.0",
 		"@supabase/supabase-js": "^2.81.1",
+		"recharts": "^3.4.1",
 		"zod": "^4.1.12"
 	},
 	"overrides": {
