--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 	"dependencies": {
 		"@supabase/ssr": "^0.7.0",
 		"@supabase/supabase-js": "^2.81.1",
+		"@tanstack/table-core": "^8.21.3",
 		"recharts": "^3.4.1",
 		"zod": "^4.1.12"
 	},
