refactor: :zap: Cleaned up migrations and possible fix for deployment.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,34 @@
 	"cSpell.words": [
 		"Afroze",
 		"afrze",
+		"Bandhan",
+		"BDBL",
+		"CNRB",
 		"DAAF",
 		"ENOTFOUND",
 		"esbuild",
+		"FDRL",
 		"geolocation",
+		"HDFC",
+		"ICIC",
+		"ICICI",
+		"IDFB",
+		"IDFC",
 		"ieedan",
 		"ifsc",
+		"INDB",
+		"KKBK",
+		"Kotak",
 		"layerchart",
 		"neoconfetti",
 		"nosniff",
 		"plpgsql",
+		"proname",
+		"pronamespace",
+		"psql",
+		"PUNB",
+		"RATN",
+		"regnamespace",
 		"schemaname",
 		"shadcn",
 		"Shadecn",
@@ -19,9 +37,13 @@
 		"tablename",
 		"TIMESTAMPTZ",
 		"typname",
+		"typtype",
+		"UBIN",
 		"Unmapping",
+		"UTIB",
 		"vaul",
 		"vercel",
-		"Vite"
+		"Vite",
+		"YESB"
 	]
 }
